Added front-end workflow & assets

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ wp-content/*
 !wp-content/themes
 wp-content/themes/*
 !wp-content/themes/courswp
+wp-content/themes/courswp/assets
+wp-content/themes/courswp/node_modules
